// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customFields getCustomFields renders the correct components for each key 1`] = `
<div>
  <div>
    <div
      class="text__c-txt___Uzv-G range__c-range___1aYaS "
    >
      <label
        class="text__c-txt__label___3wMPZ "
        data-garden-container-id="containers.field"
        data-garden-container-version="1.3.3"
        data-garden-id="forms.text_label"
        data-garden-version="7.1.10"
        data-keyid="22660514"
        for="1val-field_1.3.3--input"
        id="1val-field_1.3.3--label"
      >
        <strong>
          Text
        </strong>
      </label>
      <input
        aria-describedby="1val-field_1.3.3--hint"
        aria-invalid="false"
        aria-labelledby="1val-field_1.3.3--label"
        class="text__c-txt__input___38pRd "
        data-garden-id="forms.input"
        data-garden-version="7.1.10"
        id="1val-field_1.3.3--input"
        name="22660514"
        required=""
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`customFields getCustomFields renders the correct components for each key 2`] = `
.c2.c2 {
  vertical-align: baseline;
  position: absolute;
  left: -100px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  outline: 0;
  border-width: 0;
  border-style: initial;
  border-color: initial;
  background: 0 center;
  width: 1px;
  color: transparent;
  font-size: inherit;
}

.c3.c3 {
  position: relative;
}

.c3:focus {
  outline: none;
}

.c4 {
  overflow-y: auto;
  max-height: 17.142857142857142rem;
}

.c1 {
  cursor: default;
}

.c1.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0.c0.c0 {
  margin-bottom: 0 !important;
}

<div>
  <div>
    <div
      role="presentation"
      tabindex="-1"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-0-label"
        class="text__c-txt___3byGW "
        data-garden-id="dropdowns.field"
        data-garden-version="7.1.10"
        role="combobox"
      >
        <label
          class="text__c-txt__label___2Nog7 "
          data-garden-id="dropdowns.label"
          data-garden-version="7.1.10"
          data-keyid="10006"
          for="downshift-0-input"
          id="downshift-0-label"
        >
          <strong>
            Nested Drop Down
          </strong>
        </label>
        <div
          aria-haspopup="true"
          aria-invalid="false"
          class="c0 text__c-txt__input___17zQx text__c-txt__input--select___324ys c1"
          data-garden-id="dropdowns.select"
          data-garden-version="7.1.10"
          data-testid="dropdown-field"
          data-toggle="true"
          name="10006"
          role="button"
          tabindex="0"
          type="button"
        >
          -
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-0-label"
            autocomplete="off"
            class="text__c-txt__input___17zQx text__c-txt__input--bare___PN_Zg c2"
            id="downshift-0-input"
            readonly=""
            tabindex="-1"
            value=""
          />
        </div>
      </div>
      <div
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none; z-index: -1; visibility: hidden;"
      >
        <div
          class=""
        >
          <ul
            aria-labelledby="downshift-0-label"
            class="index__c-menu___3N4tx c3"
            data-garden-id="dropdowns.menu"
            data-garden-version="7.1.10"
            data-testid="dropdown-options"
            id="downshift-0-menu"
            role="listbox"
            style="width: 0px;"
          >
            <div
              class="c4"
            />
          </ul>
        </div>
      </div>
    </div>
    <input
      data-testid="dropdown-selected-value"
      name="10006"
      type="hidden"
      value=""
    />
  </div>
</div>
`;

exports[`customFields getCustomFields renders the correct components for each key 3`] = `
.c2.c2 {
  vertical-align: baseline;
  position: absolute;
  left: -100px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  outline: 0;
  border-width: 0;
  border-style: initial;
  border-color: initial;
  background: 0 center;
  width: 1px;
  color: transparent;
  font-size: inherit;
}

.c3.c3 {
  position: relative;
}

.c3:focus {
  outline: none;
}

.c4 {
  overflow-y: auto;
  max-height: 17.142857142857142rem;
}

.c1 {
  cursor: default;
}

.c1.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0.c0.c0 {
  margin-bottom: 0 !important;
}

<div>
  <div>
    <div
      role="presentation"
      tabindex="-1"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-1-label"
        class="text__c-txt___3byGW "
        data-garden-id="dropdowns.field"
        data-garden-version="7.1.10"
        role="combobox"
      >
        <label
          class="text__c-txt__label___2Nog7 "
          data-garden-id="dropdowns.label"
          data-garden-version="7.1.10"
          data-keyid="22666574"
          for="downshift-1-input"
          id="downshift-1-label"
        >
          <strong>
            Department
          </strong>
        </label>
        <div
          aria-haspopup="true"
          aria-invalid="false"
          class="c0 text__c-txt__input___17zQx text__c-txt__input--select___324ys c1"
          data-garden-id="dropdowns.select"
          data-garden-version="7.1.10"
          data-testid="dropdown-field"
          data-toggle="true"
          name="22666574"
          role="button"
          tabindex="0"
          type="button"
        >
          -
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-1-label"
            autocomplete="off"
            class="text__c-txt__input___17zQx text__c-txt__input--bare___PN_Zg c2"
            id="downshift-1-input"
            readonly=""
            tabindex="-1"
            value=""
          />
        </div>
      </div>
      <div
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none; z-index: -1; visibility: hidden;"
      >
        <div
          class=""
        >
          <ul
            aria-labelledby="downshift-1-label"
            class="index__c-menu___3N4tx c3"
            data-garden-id="dropdowns.menu"
            data-garden-version="7.1.10"
            data-testid="dropdown-options"
            id="downshift-1-menu"
            role="listbox"
            style="width: 0px;"
          >
            <div
              class="c4"
            />
          </ul>
        </div>
      </div>
    </div>
    <input
      data-testid="dropdown-selected-value"
      name="22666574"
      type="hidden"
      value=""
    />
  </div>
</div>
`;

exports[`customFields getCustomFields renders the correct components for each key 4`] = `
<div>
  <div>
    <div
      class="text__c-txt___Uzv-G range__c-range___1aYaS "
    >
      <label
        class="text__c-txt__label___3wMPZ "
        data-garden-container-id="containers.field"
        data-garden-container-version="1.3.3"
        data-garden-id="forms.text_label"
        data-garden-version="7.1.10"
        data-keyid="22660524"
        for="2val-field_1.3.3--input"
        id="2val-field_1.3.3--label"
      >
        <strong>
          Order Details
        </strong>
      </label>
      <textarea
        aria-describedby="2val-field_1.3.3--hint"
        aria-invalid="false"
        aria-labelledby="2val-field_1.3.3--label"
        class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
        data-garden-id="forms.textarea"
        data-garden-version="7.1.10"
        id="2val-field_1.3.3--input"
        name="22660524"
        required=""
        rows="5"
      />
    </div>
  </div>
</div>
`;

exports[`customFields getCustomFields renders the correct components for each key 5`] = `
<div>
  <div>
    <div
      class="text__c-txt___Uzv-G range__c-range___1aYaS "
    >
      <label
        class="text__c-txt__label___3wMPZ "
        data-garden-container-id="containers.field"
        data-garden-container-version="1.3.3"
        data-garden-id="forms.text_label"
        data-garden-version="7.1.10"
        data-keyid="22823250"
        for="3val-field_1.3.3--input"
        id="3val-field_1.3.3--label"
      >
        <strong>
          Age
        </strong>
      </label>
      <div
        class="text__c-txt__hint___24dmS "
        data-garden-id="forms.text_hint"
        data-garden-version="7.1.10"
        id="3val-field_1.3.3--hint"
      >
        this is the integer description
      </div>
      <input
        aria-describedby="3val-field_1.3.3--hint"
        aria-invalid="false"
        aria-labelledby="3val-field_1.3.3--label"
        class="text__c-txt__input___38pRd "
        data-garden-id="forms.input"
        data-garden-version="7.1.10"
        id="3val-field_1.3.3--input"
        min="0"
        name="22823250"
        required=""
        step="1"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`customFields getCustomFields renders the correct components for each key 6`] = `
<div>
  <div>
    <div
      class="text__c-txt___Uzv-G range__c-range___1aYaS "
    >
      <label
        class="text__c-txt__label___3wMPZ "
        data-garden-container-id="containers.field"
        data-garden-container-version="1.3.3"
        data-garden-id="forms.text_label"
        data-garden-version="7.1.10"
        data-keyid="22823260"
        for="4val-field_1.3.3--input"
        id="4val-field_1.3.3--label"
      >
        <strong>
          Total Cost
        </strong>
      </label>
      <div
        class="text__c-txt__hint___24dmS "
        data-garden-id="forms.text_hint"
        data-garden-version="7.1.10"
        id="4val-field_1.3.3--hint"
      >
        this is the decimal description
      </div>
      <input
        aria-describedby="4val-field_1.3.3--hint"
        aria-invalid="false"
        aria-labelledby="4val-field_1.3.3--label"
        class="text__c-txt__input___38pRd "
        data-garden-id="forms.input"
        data-garden-version="7.1.10"
        id="4val-field_1.3.3--input"
        name="22823260"
        required=""
        step="any"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`customFields getCustomFields renders the correct components for each key 7`] = `
<div>
  <div>
    <div
      data-testid="checkbox-field"
    >
      <div
        class="text__c-txt___Uzv-G range__c-range___1aYaS "
      >
        <div
          class="checkbox__c-chk___1VO4F "
        >
          <input
            aria-labelledby="5val-field_1.3.3--label"
            class="checkbox__c-chk__input___3419r "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="forms.checkbox"
            data-garden-version="7.1.10"
            id="5val-field_1.3.3--input"
            name="22823270"
            required=""
            tabindex="0"
            type="checkbox"
          />
          <label
            class="checkbox__c-chk__label___12wm4 "
            data-garden-container-id="containers.field"
            data-garden-container-version="1.3.3"
            data-garden-id="forms.checkbox_label"
            data-garden-version="7.1.10"
            data-keyid="22823270"
            for="5val-field_1.3.3--input"
            id="5val-field_1.3.3--label"
          >
            <strong>
              Can we call you?
            </strong>
          </label>
          <div
            class="checkbox__c-chk__hint___1WMmR "
            data-garden-id="forms.checkbox_hint"
            data-garden-version="7.1.10"
            id="5val-field_1.3.3--hint"
          >
            this is the description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`customFields getCustomFields renders the correct components for each key 8`] = `
<div>
  <div>
    <div
      class="text__c-txt___Uzv-G range__c-range___1aYaS "
    >
      <label
        class="text__c-txt__label___3wMPZ "
        data-garden-container-id="containers.field"
        data-garden-container-version="1.3.3"
        data-garden-id="forms.text_label"
        data-garden-version="7.1.10"
        data-keyid="2284527"
        for="6val-field_1.3.3--input"
        id="6val-field_1.3.3--label"
      >
        <strong>
          How can we help?
        </strong>
         (optional)
      </label>
      <textarea
        aria-describedby="6val-field_1.3.3--hint"
        aria-invalid="false"
        aria-labelledby="6val-field_1.3.3--label"
        class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
        data-garden-id="forms.textarea"
        data-garden-version="7.1.10"
        id="6val-field_1.3.3--input"
        name="2284527"
        rows="5"
      />
    </div>
  </div>
</div>
`;

exports[`customFields getCustomFields renders the correct components for each key 9`] = `
<div>
  <div>
    <div
      class="text__c-txt___Uzv-G range__c-range___1aYaS "
    >
      <label
        class="text__c-txt__label___3wMPZ "
        data-garden-container-id="containers.field"
        data-garden-container-version="1.3.3"
        data-garden-id="forms.text_label"
        data-garden-version="7.1.10"
        data-keyid="2284528"
        for="7val-field_1.3.3--input"
        id="7val-field_1.3.3--label"
      >
        <strong>
          What is your query about?
        </strong>
      </label>
      <div
        class="text__c-txt__hint___24dmS "
        data-garden-id="forms.text_hint"
        data-garden-version="7.1.10"
        id="7val-field_1.3.3--hint"
      >
        subject description
      </div>
      <input
        aria-describedby="7val-field_1.3.3--hint"
        aria-invalid="false"
        aria-labelledby="7val-field_1.3.3--label"
        class="text__c-txt__input___38pRd "
        data-garden-id="forms.input"
        data-garden-version="7.1.10"
        id="7val-field_1.3.3--input"
        name="2284528"
        required=""
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`customFields updateConditionalVisibility with conditions with form state with allFieldsAsConditions 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -3,5 +3,5 @@
      "editable_in_portal": true,
      "id": "22660514",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Text",
      "type": "text",
@@ -51,5 +51,5 @@
      "editable_in_portal": true,
      "id": "22660524",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Order Details",
      "type": "textarea",
@@ -60,5 +60,5 @@
      "editable_in_portal": true,
      "id": "22823250",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Age",
      "type": "integer",
@@ -69,5 +69,5 @@
      "editable_in_portal": true,
      "id": "22823260",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Total Cost",
      "type": "decimal",
`;

exports[`customFields updateConditionalVisibility with conditions with form state with conditionWithMultipleChildren 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -51,5 +51,5 @@
      "editable_in_portal": true,
      "id": "22660524",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Order Details",
      "type": "textarea",
@@ -86,5 +86,5 @@
      "editable_in_portal": true,
      "id": "2284527",
-     "required_in_portal": false,
+     "required_in_portal": true,
      "title_in_portal": "How can we help?",
      "type": "description",
`;

exports[`customFields updateConditionalVisibility with conditions with form state with multipleConditions one fulfilled 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -51,5 +51,5 @@
      "editable_in_portal": true,
      "id": "22660524",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Order Details",
      "type": "textarea",
@@ -78,8 +78,8 @@
      "editable_in_portal": true,
      "id": "22823270",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Can we call you?",
      "type": "checkbox",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
`;

exports[`customFields updateConditionalVisibility with conditions with form state with multipleConditions one fulfilled 2`] = `
Snapshot Diff:
- First value
+ Second value

@@ -51,5 +51,5 @@
      "editable_in_portal": true,
      "id": "22660524",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Order Details",
      "type": "textarea",
@@ -78,5 +78,5 @@
      "editable_in_portal": true,
      "id": "22823270",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Can we call you?",
      "type": "checkbox",
`;

exports[`customFields updateConditionalVisibility with conditions with form state with multipleConditionsOnSameChild one fulfilled 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -51,5 +51,5 @@
      "editable_in_portal": true,
      "id": "22660524",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Order Details",
      "type": "textarea",
`;

exports[`customFields updateConditionalVisibility with conditions with form state with multipleConditionsOnSameChild one fulfilled 2`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`customFields updateConditionalVisibility with conditions with form state with singleCondition 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -51,5 +51,5 @@
      "editable_in_portal": true,
      "id": "22660524",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Order Details",
      "type": "textarea",
`;

exports[`customFields updateConditionalVisibility with conditions with no form state with allFieldsAsConditions 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -3,8 +3,8 @@
      "editable_in_portal": true,
      "id": "22660514",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Text",
      "type": "text",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
@@ -25,8 +25,8 @@
      "editable_in_portal": true,
      "id": "10006",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Nested Drop Down",
      "type": "tagger",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
@@ -43,16 +43,16 @@
      "editable_in_portal": true,
      "id": "22666574",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Department",
      "type": "tagger",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
      "editable_in_portal": true,
      "id": "22660524",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Order Details",
      "type": "textarea",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
@@ -60,8 +60,8 @@
      "editable_in_portal": true,
      "id": "22823250",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Age",
      "type": "integer",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
@@ -69,8 +69,8 @@
      "editable_in_portal": true,
      "id": "22823260",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Total Cost",
      "type": "decimal",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
@@ -78,8 +78,8 @@
      "editable_in_portal": true,
      "id": "22823270",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Can we call you?",
      "type": "checkbox",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
@@ -89,5 +89,5 @@
      "title_in_portal": "How can we help?",
      "type": "description",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
@@ -95,8 +95,8 @@
      "editable_in_portal": true,
      "id": "2284528",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "What is your query about?",
      "type": "subject",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
  ]
`;

exports[`customFields updateConditionalVisibility with conditions with no form state with conditionWithMultipleChildren 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -51,8 +51,8 @@
      "editable_in_portal": true,
      "id": "22660524",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Order Details",
      "type": "textarea",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
@@ -89,5 +89,5 @@
      "title_in_portal": "How can we help?",
      "type": "description",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
@@ -95,8 +95,8 @@
      "editable_in_portal": true,
      "id": "2284528",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "What is your query about?",
      "type": "subject",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
  ]
`;

exports[`customFields updateConditionalVisibility with conditions with no form state with multipleConditions 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -51,8 +51,8 @@
      "editable_in_portal": true,
      "id": "22660524",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Order Details",
      "type": "textarea",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
@@ -78,8 +78,8 @@
      "editable_in_portal": true,
      "id": "22823270",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Can we call you?",
      "type": "checkbox",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
`;

exports[`customFields updateConditionalVisibility with conditions with no form state with multipleConditionsOnSameChild 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -51,8 +51,8 @@
      "editable_in_portal": true,
      "id": "22660524",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Order Details",
      "type": "textarea",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
`;

exports[`customFields updateConditionalVisibility with conditions with no form state with singleCondition 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -51,8 +51,8 @@
      "editable_in_portal": true,
      "id": "22660524",
-     "required_in_portal": true,
+     "required_in_portal": false,
      "title_in_portal": "Order Details",
      "type": "textarea",
-     "visible_in_portal": true,
+     "visible_in_portal": false,
    },
    Object {
`;
